[tool.poetry]
name = "hello-poetry"
version = "0.1.0"
description = "A simple package to test a Poetry package"
authors = ["Jitse-Jan <code@jitsejan.com>"]
readme = "README.md"
homepage = "https://github.com/jitsejan/hello-poetry"
repository = "https://github.com/jitsejan/hello-poetry"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
